# TurboControllerB

./: .mxproject  CMakeLists.txt  README.md  STM32F412XX_FLASH.ld  TurboControllerB.ioc
App/: app_init.c  app_init.h  app_main.c  app_main.h  app_tasks.c  app_tasks.h
BSP/: bsp.c  bsp.h  bsp_adc.c  bsp_adc.h  bsp_can.c  bsp_can.h  bsp_gpio.c  bsp_gpio.h  bsp_power.c  bsp_power.h  bsp_pwm.c  bsp_pwm.h  bsp_spi.c  bsp_spi.h  bsp_tim.c  bsp_tim.h  bsp_uart.c  bsp_uart.h
Components/drv8311/: drv8311.c  drv8311.h
Components/ina199/: ina199.c  ina199.h
Components/max6675/: max6675.c  max6675.h
Config/: board_config.h  fault_config.h  pin_config.h  task_config.h  version.h
Core/Inc/: adc.h  main.h  stm32f4xx_it.h  tim.h
Core/Src/: adc.c  can.c  freertos.c  gpio.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
Modules/ignition/: ignition.c  ignition.h
Modules/motor/: motor.c  motor.h
Modules/safety/: safety.c  safety.h
Modules/sensor/: rpm.c  rpm.h  sensor.c  sensor.h
Modules/sub_enable/: sub_enable.c  sub_enable.h
Modules/valve/: valve.c  valve.h
Protocol/: protocol_can.c  protocol_can.h  protocol_debug.c  protocol_debug.h
RTOS/: rtos.c  rtos.h  rtos_events.c  rtos_events.h  rtos_mutex.c  rtos_mutex.h  rtos_queues.c  rtos_queues.h  rtos_tasks.c  rtos_tasks.h  rtos_timer.c  rtos_timer.h
Services/: service_fault.c  service_fault.h  service_log.c  service_log.h  service_param.c  service_param.h  service_watchdog.c  service_watchdog.h
cmake/stm32cubemx/: CMakeLists.txt
